[workspace]

# Here we declare that this is a workspace, containing several crates
# within it.
#
# Please keep this list topologically sorted by dependency relation, so
# that every crate appears _before_ any other crate that depends on it.
# This also applies to dev-dependencies.
# We depend on this for publishing to crates.io. e.g.
# see
# https://blog.iany.me/2020/10/gotchas-to-publish-rust-crates-in-a-workspace/#cyclic-dependencies
members = [
    "crates/arti",
    "crates/oneshot-fused-workaround",
    "crates/slotmap-careful",
    "crates/test-temp-dir",
    "crates/fslock-guard",
    "crates/hashx",
    "crates/equix",
    "crates/tor-basic-utils",
    "crates/caret",
    "crates/fs-mistrust",
    "crates/safelog",
    "crates/retry-error",
    "crates/tor-error",
    "crates/tor-general-addr",
    "crates/tor-events",
    "crates/tor-geoip",
    "crates/tor-rtcompat",
    "crates/tor-rtmock",
    "crates/tor-async-utils",
    "crates/tor-config",
    "crates/tor-config-path",
    "crates/tor-rpc-connect",
    "crates/tor-log-ratelim",
    "crates/tor-rpcbase",
    "crates/tor-memquota",
    "crates/tor-units",
    "crates/tor-llcrypto",
    "crates/tor-protover",
    "crates/tor-bytes",
    "crates/tor-checkable",
    "crates/tor-cert",
    "crates/tor-key-forge",
    "crates/tor-hscrypto",
    "crates/tor-socksproto",
    "crates/tor-linkspec",
    "crates/tor-cell",
    "crates/tor-proto",
    "crates/tor-netdoc",
    "crates/tor-netdir",
    "crates/tor-relay-selection",
    "crates/tor-persist",
    "crates/tor-chanmgr",
    "crates/tor-ptmgr",
    "crates/tor-guardmgr",
    "crates/tor-circmgr",
    "crates/tor-dirclient",
    "crates/tor-dirmgr",
    "crates/tor-keymgr",
    "crates/tor-hsclient",
    "crates/tor-hsservice",
    "crates/tor-hsrproxy",
    "crates/tor-relay-crypto",
    "crates/arti-client",
    "crates/arti-relay",
    "crates/arti-rpcserver",
    "crates/arti-config",
    "crates/arti",
    "crates/arti-bench",
    "crates/arti-testing",

    "crates/arti-rpc-client-core",

    "maint/fixup-features",
    "maint/keygen-openssh-test",

    "examples/gsoc2023/connection-checker",
    "examples/gsoc2023/dns-resolver",
    "examples/gsoc2023/obfs4-checker",
    "examples/gsoc2023/pt-proxy",
    "examples/hyper/hyper-http-client-example",
    "examples/hyper/hyper-http-hs-example",
    "examples/axum/axum-hello-world",
    "examples/download-manager",
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'

[profile.release.package.slotmap-careful]
opt-level = 2

[profile.quicktest]
inherits = "release"
lto = "thin"
codegen-units = 16
opt-level = 2
incremental = true

[profile.bench]
debug = 2
strip = "none"
